--- a/.github/workflows/sonar-workflow.yml
+++ b/.github/workflows/sonar-workflow.yml
@@ -6,8 +6,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+    - uses: actions/checkout@v4
 
     - name: Set up JDK 21
       uses: actions/setup-java@v4
@@ -16,13 +15,12 @@ jobs:
         distribution: 'zulu'
         cache: maven
 
-    - name: Build & Scan with SonarCloud
-      run: |
-        mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
-          -Dsonar.projectKey=trainingss_testtrainingss \
-          -Dsonar.organization=testtrainingss \
-          -Dsonar.host.url=https://sonarcloud.io \
-          -Dsonar.token=${SONAR_TOKEN}
+    - name: Build with Maven and Sonar
+      run: mvn -B verify sonar:sonar \
+        -Dsonar.projectKey=perry_perry \
+        -Dsonar.organization=perry \
+        -Dsonar.host.url=https://sonarcloud.io \
+        -Dsonar.token=$SONAR_TOKEN
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
