--- a/.github/workflows/sonar-workflow.yml
+++ b/.github/workflows/sonar-workflow.yml
@@ -1,4 +1,5 @@
 name: Run SonarQube with Maven
+
 on: push
 
 jobs:
@@ -15,12 +16,13 @@ jobs:
         distribution: 'zulu'
         cache: maven
 
-    - name: Build with Maven and Sonar
-      run: mvn -B verify sonar:sonar \
-        -Dsonar.projectKey=perry_perry \
-        -Dsonar.organization=perry \
-        -Dsonar.host.url=https://sonarcloud.io \
-        -Dsonar.token=$SONAR_TOKEN
+    - name: Build with Maven and SonarCloud
+      run: |
+        mvn -B verify sonar:sonar \
+          -Dsonar.projectKey=perry_perry \
+          -Dsonar.organization=perry \
+          -Dsonar.host.url=https://sonarcloud.io \
+          -Dsonar.token=$SONAR_TOKEN
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
